--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-### your site title here
+### soft x solid
 
-title: Hagura - Light!
-baseurl: /hagura # name of the repository
-email: your@email.com
+title: soft x solid
+baseurl: /softxsolid
+email: contacthansol@gmail.com
 
 
 
